# loudness

./: README.md  loudness.db  pyproject.toml  results.csv  results.json  results_scrapfly.csv  sf_loudness.csv  viewer.html
docs/: index.html  sf_loudness.csv
scripts/: add_details.py  dedup_csv.py  fix_names.py  get_sf_restaurants.py  sample_urls.txt  scrape_city.py  spot_check.py  spot_check_scrapfly.py
src/loudness/: __init__.py  backoff.py  cli.py  config.py  fetcher.py  models.py  orchestrator.py  parser.py  proxy.py  state.py
