[project]
name = "loudness"
version = "0.1.0"
description = "Resilient Yelp noise level scraper with state persistence and proxy rotation"
readme = "README.md"
authors = [
    { name = "Randall Lin", email = "randall@thinkingmachines.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "curl-cffi>=0.15.0",
    "httpx>=0.28.1",
    "parsel>=1.11.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]

[project.scripts]
loudness = "loudness.cli:app"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]
